--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tooltip": "^5.14.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
